--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [master]
-    paths-ignore:
-      - '**/README.md'
   pull_request:
-    branches: [master]
+    branches: [develop]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
