--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          java-version: $
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          java-version: '11'
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: $
