--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,16 +24,16 @@ jobs:
     runs-on: ubuntu-latest
     env:
       JAVA_VERSION: "11.0"
-      FLUTTER_VERSION: "2.5.3"
+      FLUTTER_VERSION: "2.x"
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '11'
+          java-version: $JAVA_VERSION
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '2.x'
+          flutter-version: $FLUTTER_VERSION
           channel: 'stable'
           cache: true
           cache-key: flutter # optional, change this to force refresh cache
