--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,10 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: $JAVA_VERSION
+          java-version: "$JAVA_VERSION"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: $FLUTTER_VERSION
+          flutter-version: "$FLUTTER_VERSION"
           channel: 'stable'
           cache: true
           cache-key: flutter # optional, change this to force refresh cache
