--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,19 +27,19 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: "$JAVA_VERSION"
+          java-version: $JAVA_VERSION
         env:
-          JAVA_VERSION: "11.0"
+          JAVA_VERSION: '11.0'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "$FLUTTER_VERSION"
+          flutter-version: '$FLUTTER_VERSION'
           channel: 'stable'
           cache: true
           cache-key: flutter # optional, change this to force refresh cache
           cache-path: ${{ runner.tool_cache }}/flutter # optional, change this to specify the cache path
           architecture: x64 # optional, x64 or arm64
         env:
-          FLUTTER_VERSION: "2.x"
+          FLUTTER_VERSION: '2.x'
       - run: flutter --version
       - run: flutter pub get
       - run: flutter analyze
