--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: $JAVA_VERSION
+          java-version: '$JAVA_VERSION'
         env:
           JAVA_VERSION: '11.0'
       - uses: subosito/flutter-action@v2
