--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,18 +23,18 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      JAVA_VERSION: '11.0'
-      FLUTTER_VERSION: '2.x'
+      JAVA_VERSION: "11.0"
+      FLUTTER_VERSION: "2.x"
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu' # See 'Supported distributions' for available options
-          java-version: '$JAVA_VERSION'
+          distribution: "zulu" # See 'Supported distributions' for available options
+          java-version: "$JAVA_VERSION"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '$FLUTTER_VERSION'
-          channel: 'stable'
+          flutter-version: "$FLUTTER_VERSION"
+          channel: "stable"
           cache: true
           cache-key: flutter # optional, change this to force refresh cache
           cache-path: ${{ runner.tool_cache }}/flutter # optional, change this to specify the cache path
