--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: "zulu" # See 'Supported distributions' for available options
-          java-version: "$JAVA_VERSION"
+          java-version: $JAVA_VERSION
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "$FLUTTER_VERSION"
